src/ceal/tests/neg3/191.gold
Error: (line 4:1 'pragma') Pragma must be declared at the top
