src/ceal/tests/neg3/191.sct
0
1
2
.pragma PQ=17.11 r=2

# pragma not at the beginning must produce error